Add authentication methods:  * /api/login  * /api/create_user
