# app/models/User.py
@@ -7,7 +7,15 @@ class User(db.Model):
     __tablename__ = 'users'
 
     id = db.Column(db.Integer, primary_key=True, autoincrement=True)
-    username = db.Column(db.String(255), nullable=False)
+    username = db.Column(db.String(255), unique=True, nullable=False)
+    display_name = db.Column(db.String(255))
     password = db.Column(db.String(255))
     last_login_time = db.Column(db.DateTime, default=datetime.datetime.now())
     local_user = db.Column(db.Boolean, default=True)
+
+    def dump(self):
+        return {
+            'username': self.username,
+            'display_name': self.display_name,
+            'last_login_time': self.last_login_time
+        }
