# app/openapi.yaml
@@ -24,3 +24,80 @@ paths:
                   pong:
                     type: string
                     example: OK
+  /login:
+    get:
+      tags:
+        - Auth
+      summary: Login user. Retrieve JWT token in Authorization headers.
+      operationId: app.views.auth.login
+      security:
+        - basicAuth: []
+      responses:
+        '200':
+          description: 'Login successful.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '401':
+          description: User not authenticated.
+
+  /users:
+    post:
+      tags:
+        - Auth
+      summary: Create new user (if logged in user is superpowered). Retrieve JWT token for new user in Authorization headers.
+      operationId: app.views.auth.create_user
+      security:
+        - basicAuth: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              x-body-name: user_data
+              type: object
+              properties:
+                username:
+                  type: string
+                  example: test
+                password:
+                  type: string
+                  example: 'sup3r$4f3'
+                display_name:
+                  type: string
+                  example: Test User
+              required:
+                - username
+                - password
+      responses:
+        '200':
+          description: User created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '401':
+          description: User not authenticated.
+        '403':
+          description: User not allowed to create another user.
+
+components:
+  securitySchemes:
+    basicAuth:
+      type: http
+      scheme: basic
+      x-basicInfoFunc: app.views.auth.basic_auth
+
+  schemas:
+    User:
+      type: object
+      properties:
+        username:
+          type: string
+          example: test_user
+        display_name:
+          type: string
+          example: Test User
+        last_login_time:
+          type: string
+          example: 2020-03-29T15:32:13Z
